add runtime service